@@ -2,7 +2,7 @@ sg3-utils (1.37-0.1) unstable; urgency=low
 
   * New upstream version
 
- -- Douglas Gilbert <dgilbert@interlog.com>  Mon, 01 Jul 2013 15:00:00 -0400
+ -- Douglas Gilbert <dgilbert@interlog.com>  Fri, 19 Jul 2013 18:00:00 -0400
 
 sg3-utils (1.36-0.1) unstable; urgency=low
 
